Bug 773798 - Multi-process support for MediaStorage - Use PBlob. r=bent